syntax = "proto3";

package backup;

option go_package = "github.com/oiler-backup/base/proto";

message BackupRequest {
  string db_uri = 1;
  int64 db_port = 2;
  string db_user = 3;
  string db_pass = 4;
  string db_name = 5;
  string database_type = 6;
  string schedule = 7;

  string s3_endpoint = 9;
  string s3_access_key = 10;
  string s3_secret_key = 11;
  string s3_bucket_name = 12;

  string core_addr = 13;
  int64 max_backup_count = 14;
}

message BackupResponse {
  string status = 1;
  string cronjob_name = 2;
  string cronjob_namespace = 3;
}

message UpdateBackupRequest {
  BackupRequest request = 1;
  string cronjob_name = 2;
  string cronjob_namespace = 3;
}

message BackupRestore {
  string db_uri = 1;
  int64 db_port = 2;
  string db_user = 3;
  string db_pass = 4;
  string db_name = 5;
  string database_type = 6;

  string s3_endpoint = 9;
  string s3_access_key = 10;
  string s3_secret_key = 11;
  string s3_bucket_name = 12;

  string backupRevision = 13;
  string core_addr = 14;
  string auto_restore = 15;
  string schedule = 16;
}

message BackupRestoreResponse {
  string status = 1;
  string job_name = 2;
  string job_namespace = 3;
}

service BackupService {
  rpc Backup(BackupRequest) returns (BackupResponse);
  rpc Update(UpdateBackupRequest) returns (BackupResponse);
  rpc Restore(BackupRestore) returns (BackupRestoreResponse);
}